route-view fixes - replace activity name by icon - move activity icon in header to the left - inverse min/max and up/down values + join 'm' unit to the number - selected orientation color (on svg) - displaying situation (in info block) fix - remove scrolling on mobile from associated outings

--- a/less/c2corg_ui.less
+++ b/less/c2corg_ui.less
@@ -327,7 +327,7 @@ main {
   }
   @media @phone {
     border-width: 1px;
-    font-size: 1.3em;
+    font-size: 1.2em;
   }
   .waypoint-type {
     font-size: 2em;
@@ -596,6 +596,7 @@ app-simple-search {
   padding-left: 10px;
   margin-right: 10px;
   background: @C2C-orange;
+  width: 25%;
 
   .glyphicon {
     color: #F9F9F9;
