--- a/less/viewdetails.less
+++ b/less/viewdetails.less
@@ -25,6 +25,24 @@
     transition: 0.4s;
     line-height: 45px;
     font-size: 2.5em;
+    &.routes {
+      .flex();
+      align-items: center;
+      justify-content: center;
+      width: 99%;
+      .title {
+        max-width: 70%;
+        margin-right: 10px;
+      }
+      .icons-header {
+        font-size: 2em;
+        margin-right: 10px;
+        @media @phone {
+          margin-right: 5px;
+          width: 150px;
+        }
+      }
+    }
 
     @media @phone {
       font-size: 1.5em;
@@ -35,11 +53,20 @@
       font-size: 2em;
       line-height: 35px;
     }
+    .waypoint-type {
+      color: @C2C-orange;
+    }
     .badge {
       font-size: 0.5em;
-      margin-left: 10px;
+      margin-right: 10px;
+      width: 100px;
       padding-bottom: 6px;
+      margin-top: 5px;
       cursor: pointer;
+
+      @media @phone {
+        display: none;
+      }
 
       .glyphicon {
         color: white;
@@ -247,6 +274,10 @@
       padding-bottom: 10px;
       margin-bottom: 5px;
     }
+    #associated-outings {
+      max-height: 100%;
+      overflow-y: visible;
+    }
   }
 
   .view-details-informations {
@@ -273,6 +304,10 @@
         margin: 0;
         color: @bright-green;
       }
+    }
+    .route-activity {
+      font-size: 2.5em;
+      color: @bright-green;
     }
 
     #document-informations {
@@ -375,10 +410,12 @@
 
       &.location {
         .flex();
-        ul {
-          display: none;
-          @media @phone {
-            display: block;
+        @media @phone {
+          .flex() !important;
+        }
+        .areas {
+          @media (min-width: @phone-max) {
+            display: none;
           }
         }
       }
@@ -620,6 +657,6 @@ app-add-association {
 
   #orientation-svg{
     height: 110px;
-    width: 100%;
+    width: auto;
   }
 }
